2001-04-05  Cyrille Chepelov  <chepelov@calixo.net>

	* sheets/ER.sheet:
	* sheets/Electric.sheet:
	* sheets/Flowchart.sheet:
	* sheets/Logic.sheet:
	* sheets/network.sheet: More Dutch translations from Dag Wieers.

2001-04-04  Cyrille Chepelov  <chepelov@calixo.net>

	* sheets/checktrans.py: now emits a warning when two descriptions
	for a single language code are found.

	* Makefile.am:
	* sheets/Makefile.am: -translation-reports now also depend on their
	checktrans.py
	
2001-04-04  Cyrille Chepelov  <chepelov@calixo.net>

	* sheets/Circuit.sheet:
	* sheets/Contact.sheet:
	* sheets/Logic.sheet:
	* sheets/chronogram.sheet:
	* sheets/sybase.sheet: 
	Dutch translations from Dag Wieers <dag@wieers.com>

2001-04-04  Cyrille Chepelov  <chepelov@calixo.net>

	* po-checktrans.py: Now shows the detailed counts alongside the
	percentage of translations.
	
2001-04-03  Cyrille Chepelov  <chepelov@calixo.net>

	* Makefile.am:
	* po-checktrans (NEW):
	* po-checktrans.py (NEW): builds core-translation-report:
	percentages of core (gettext) translations done [Not placed into
	po/ where that should belong, because of integration fear^Wissues
	with gettextize]. 

	TO THE KIND ATTENTION OF PACKAGERS: core-translation-report and 
	sheets/sheet-translation-report probably ought to be copied on the 
	user's /usr/share/doc/dia (or equivalent) directory.

	* sheets/Makefile.am: sheet-translation-report now a simple
	EXTRA_DIST; make install won't install it by default. 
	
2001-04-03  Cyrille Chepelov  <chepelov@calixo.net>

	* app/preferences.c: changed the default grid colour to something
	less intrusive.	

	* shapes/SDL/*.shape:
	* sheets/SDL.sheet: renamed all SDL shapes to conform to the
	"$LIBRARY - $NAME" convention. THIS REQUIRES FIXING THE EXISTING
	DIA FILES (well, for files using SDL), see the mailing list
	archive "SDL (ab)using the global shape namespace" for a script to
	do this conversion.

	* sheets/SDL.sheet: translated into French